--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 <body>
 
     <h1>hi, configuracion del git & vscode completado</h1>
+
+    <h2>PROBANDO LOS COMANDOS</h2>
+    <h3>SIGUIENTE</h3>
+    <br><h3>Atras</h3>
     
 </body>
 </html>
