curso git ejemplos
tutorias

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <h1>hi, configuracion del git & vscode completado</h1>
 
     <h2>PROBANDO LOS COMANDOS</h2>
-    <h3>SIGUIENTE</h3>
-    <br><h3>Atras</h3>
+    <h3>COMANDOS  GIT</h3>
+    <br><h3>COMANDOS CSS</h3>
     
 </body>
 </html>
